gitops/overlays/production/exposure/api-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultbank-api-http
  namespace: vault-bank-prod
  labels:
    app.kubernetes.io/name: vaultbank-api
    app.kubernetes.io/part-of: vaultbank
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: vault-bank-prod-vaultbank-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prod.vaultbank.internal
      http:
        paths:
          - path: /v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /v1/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /v1/accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3002
          - path: /v1/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3003
          - path: /v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3004
