gitops/overlays/production/exposure/frontend-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultbank-frontend-http
  namespace: vault-bank-prod
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: vaultbank
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: vault-bank-prod-vaultbank-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prod.vaultbank.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
